ajuste de busqueda

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,25 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
+  <servlet>
+  	<servlet-name>StartServlet</servlet-name>
+  	<display-name>StartServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.dmfa.simuladorxj.servlets.StartServlet</servlet-class>
+  	<load-on-startup>0</load-on-startup> 
+  </servlet>
+  <servlet>
+  	<servlet-name>ProcessServlet</servlet-name>
+  	<display-name>ProcessServlet</display-name>
+  	<description></description>
+  	<servlet-class>com.dmfa.simuladorxj.servlets.ProcessServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>StartServlet</servlet-name>
+  	<url-pattern>/StartServlet</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>ProcessServlet</servlet-name>
+  	<url-pattern>/ProcessServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
