--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
 			<version>2.3.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
