--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,6 @@
   </servlet-mapping>
   <servlet-mapping>
   	<servlet-name>ProcessServlet</servlet-name>
-  	<url-pattern>/ProcessServlet</url-pattern>
+  	<url-pattern>/ProcessServlet/*</url-pattern>
   </servlet-mapping>
 </web-app>
