Eliminacion de comentarios en jaxb2-maven-plugin y ajustes de busqueda de mensajes

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 						<xjbSource>src/main/resources/xsd/global.xjb</xjbSource>
 					</xjbSources>
 					<clearOutputDir>false</clearOutputDir>
+					<noGeneratedHeaderComments>true</noGeneratedHeaderComments>
 				</configuration>
 			</plugin>
 
