--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,26 +3,40 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-  	<servlet-name>StartServlet</servlet-name>
-  	<display-name>StartServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.dmfa.simuladorxj.servlets.StartServlet</servlet-class>
-  	<load-on-startup>0</load-on-startup> 
-  </servlet>
-  <servlet>
-  	<servlet-name>ProcessServlet</servlet-name>
-  	<display-name>ProcessServlet</display-name>
-  	<description></description>
-  	<servlet-class>com.dmfa.simuladorxj.servlets.ProcessServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>StartServlet</servlet-name>
-  	<url-pattern>/StartServlet</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-  	<servlet-name>ProcessServlet</servlet-name>
-  	<url-pattern>/ProcessServlet/*</url-pattern>
-  </servlet-mapping>
+	<display-name>Archetype Created Web Application</display-name>
+	<servlet>
+		<servlet-name>StartServlet</servlet-name>
+		<display-name>StartServlet</display-name>
+		<description></description>
+		<servlet-class>com.dmfa.simuladorxj.servlets.StartServlet</servlet-class>
+		<load-on-startup>0</load-on-startup>
+	</servlet>
+	<servlet>
+		<servlet-name>ProcessServlet</servlet-name>
+		<display-name>ProcessServlet</display-name>
+		<description></description>
+		<servlet-class>com.dmfa.simuladorxj.servlets.ProcessServlet</servlet-class>
+	</servlet>
+	<filter>
+		<filter-name>CORS</filter-name>
+		<filter-class>com.thetransactioncompany.cors.CORSFilter</filter-class>
+		<init-param>
+			<param-name>cors.allowOrigin</param-name>
+			<param-value>*</param-value>
+		</init-param>
+	</filter>
+
+
+	<servlet-mapping>
+		<servlet-name>StartServlet</servlet-name>
+		<url-pattern>/StartServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ProcessServlet</servlet-name>
+		<url-pattern>/ProcessServlet/*</url-pattern>
+	</servlet-mapping>
+	<filter-mapping>
+		<filter-name>CORS</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
